cambios en el css

--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
-    <header>
-        <img src="assets/images/channels4_profile.jpg" alt="Logo">
-        <h1><strong>CONTACT</strong></h1>
-        <ul>
-            <li>
-                <a href="/content.html">Content</a>
-            </li>
-            <li>
-                <a href="/index.html">Index</a>
-            </li>
-        </ul>
-    </header>
+    <header id="principal-header">
+            <img src="assets/images/channels4_profile.jpg" alt="Logo" href="index.html" id="logo">
+            <div id="header-essentials">
+                <h1><strong>PRODUCCIÓN MUSICAL</strong></h1>
+                <ul>
+                    <li>
+                        <a href="/index.html">Index</a>
+                    </li>
+
+                    <li>
+                        <a href="/content.html">Content</a>
+                    </li>
+
+                    <li>
+                        <a href="/contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
     <main>
         <form action="#" method="get">
             <fieldset>
