--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 <body>
     <div id="bloques-contenido">
 
-        <header>
-            <img src="assets/images/channels4_profile.jpg" alt="Logo">
+        <header id="principal-header">
+            <img src="assets/images/channels4_profile.jpg" alt="Logo" href="index.html" id="logo">
             <div id="header-essentials">
                 <h1><strong>PRODUCCIÓN MUSICAL</strong></h1>
                 <ul>
                     <li>
+                        <a href="/index.html">Index</a>
+                    </li>
+
+                    <li>
                         <a href="/content.html">Content</a>
                     </li>
+
                     <li>
                         <a href="/contact.html">Contact</a>
                     </li>
